# Warehouse

./: CMakeLists.txt  Delivery.cpp  Delivery.h  Factory.cpp  Factory.h  Generator.cpp  Generator.h  Interfaces.h  Item.cpp  Item.h  Shop.cpp  Shop.h  Statistics.h  Warehouse.cpp  Warehouse.h  main.cpp
